<resources>
    <string name="app_name">IOT_APP</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_toolbar">ToolbarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_home">Home</string>
    <string name="nav_dash">DashBoard</string>
    <string name="nav_acc">Account</string>
    <string name="nav_profile">My profile</string>
    <string name="nav_pass">Change Password</string>
    <string name="nav_device">Device Management</string>
    <string name="nav_scheduler">Scheduler</string>

    <string name="nav_draw_open">Open navigation drawer</string>
    <string name="nav_draw_close">Close navigation drawer</string>
</resources>